--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "tom tomsen",
   "license": "ISC",
   "devDependencies": {
+    "elm-format": "^0.8.5",
     "elm-live": "^4.0.2"
   }
 }
