--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "elm-live src/Main.elm",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
